route-tables.tf
resource "aws_route_table" "public" {
   vpc_id = aws_vpc.main_vpc.id

   tags = {
    Name = "Public-Route-Table"
   }
}

resource "aws_route" "public_route" {
    route_table_id         = aws_route_table.public.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id             = aws_internet_gateway.igw.id 
}

resource "aws_route_table_association" "public_association" {
   count          = length(var.public_subnets)
   subnet_id      = aws_subnet.public[count.index].id
   route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "Private-Route-Table"
  }
}



resource "aws_route" "private_route" {
    route_table_id         = aws_route_table.private.id 
    destination_cidr_block = "0.0.0.0/0"
    nat_gateway_id         = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "private_association" {
    count          = length(var.private_subnets)
    subnet_id      = aws_subnet.private[count.index].id
    route_table_id = aws_route_table.private.id
}
